# fs-bus

./: CLAUDE.md  Cargo.toml  README.md  package.toml
.github/workflows/: release.yml
src/: bridge.rs  buffer.rs  config.rs  error.rs  event.rs  lib.rs  message.rs  message_bus.rs  router.rs  standing_order.rs  subscription.rs  topic.rs  topics.rs  transform.rs
tests/: bus_wiring.rs  e2e_install.rs
